--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
   font-size: 20px;
-  background-color: red;
+  background-color: #303134;
   color: whitesmoke;
 }
 
